Community Memebers (#11)
* Allow Deletion

* Start Comfort Items Form

This adds the basic plumbing for adding the concept of member
profiles and more specifically adding comfort items such as
food or something more general to your community profile so that
people can let the other peopel ini the community know how they
would like to be comforted

* Save of comfort items

* Delete Comfort Item

* Add Community Member Profile Data

This adds the concept of Member Profile Data and allows us to add
things to the profile per communtiy. This way, we can change who
we are and what we share per community

* Fix Avatar URL

We want to save the file name, not the signed URL or else we get
issues when we try to read it eventually

* Stub out Community Profiile Schema idea

* Oh no

* Delete whole env

* Finish up Community Memeber Profile Schemas

* Remove Unused Imports

* Fix URL

* Update

---------
